# quicktimer

./: .gitignore  CMakeLists.txt  README.md
quicktimer/: CMakeLists.txt  Settings.cpp  Settings.h  TimerLabel.cpp  TimerLabel.h  main.cpp  quicktimer.cpp  quicktimer.h  quicktimer.qrc  quicktimer.rc  quicktimer.ui  quicktimer.vcxproj  quicktimer.vcxproj.filters  settings.ini  utils.cpp  utils.h
